<package>
  <name>stair_perception</name>
  <version>0.0.0</version>
  <description>stair_perception</description>
  <maintainer email="elmasry@todo.todo">elmasry</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/fpe</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/cfg/cpp" lflags="-Wl,-rpath,${prefix}/lib -L ${prefix}/lib -lfhg_pcl" />
    <nodelet plugin="${prefix}/pcl_nodelets.xml" />
  </export>
  
</package>


